<resources>
    <string name="app_name">JamApp</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Home</string>
    <string name="tab_text_3">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_symbol"><![CDATA[<]]></string>
    <string name="title_activity_landing">landing</string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="what_jam">What\'s Jam?</string>
    <string name="aboutUs_desc1">View, add and apply to attend various events.</string>
    <string name="aboutUs_desc2">Discover and join events in your area!</string>
    <string name="aboutUs_desc3">Also goes well with peanut butter.</string>
    <string name="contact_us">Contact Us!</string>
    <string name="aboutUs_phone_title">Phone No</string>
    <string name="aboutUs_email">enquiries@jamapp.com</string>
    <string name="aboutUs_phoneNo">012-34567890</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="description">Description (include time)</string>
    <string name="image">Image link (eg. imgur)</string>
    <string name="learnMore">learn more link</string>
    <string name="create">create</string>
    <string name="create_event_title">Create Event</string>
    <string name="jam">Jam</string>
    <string name="desc">Description</string>
    <string name="textView">textView</string>
    <string name="announce_subTitle">You are announcing</string>
    <string name="announce_title">Announce</string>
    <string name="attendeesOf_title">Attendees of</string>
    <string name="event_subTitle">event</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="btn_update">Update</string>
    <string name="upcomingEvents_title">Upcoming Events</string>
    <string name="eventTitle">Comic Fiesta 2019</string>
    <string name="eventDate">03 Dec 2019</string>
    <string name="eventVenue">KLCC, Kuala Lumpur</string>
    <string name="eventAttending">350 attending</string>
    <string name="eventDesc">This year\'s Comic Fiesta is coming to KL! Featuring a wide variety of comics, from popular favourites to obscure gems.</string>
    <string name="eventLearnMore">Learn more!</string>
    <string name="btn_imIn">I\'m in!</string>
    <string name="jam_bigTitle">JAM</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="btn_login">login</string>
    <string name="noAccount">I don\'t have an account</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="account_newPassword">New password</string>
    <string name="account_confirmPassword">Confirm with password</string>
    <string name="btn_save">save</string>
    <string name="btn_logout">logout</string>
    <string name="actionsTitle">Actions</string>
    <string name="eventsTitle">Events</string>
    <string name="btn_create_event">Create Event</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="report_subTitle">You are reporting</string>
    <string name="report_title">Report Title</string>
    <string name="report_message">Report Message</string>
    <string name="submit">Submit</string>
    <string name="report_event_title">Report Event</string>
    <string name="reports_on_title">Reports on</string>
    <string name="youOwnThis">You own this!</string>
    <string name="upcoming">UPCOMING</string>
    <string name="account_details">Account Details</string>
    <string name="help">Help</string>
    <string name="what_is_this">What is this?</string>
    <string name="help_desc">This is the \'detailed event\' page, which displays information about a particular event.</string>
    <string name="help_flag">To report the event.</string>
    <string name="help_report">To view reports of event. (Can only be seen by event owner.)</string>
    <string name="help_edit">To edit the event details. (Can only be seen by event owner.)</string>
    <string name="help_delete">To delete the event. (Can only be seen by event owner.)</string>
    <string name="help_announce">To announce the event. (Can only be seen by event owner.)</string>
    <string name="registerForEvent">Click to register for the event.</string>
    <string name="viewAttendees">Click to view attendees list.</string>
    <string name="unsplashCitation">Photos from Unplash</string>
</resources>
